Fix padding on mobile

--- a/assets/styles/layouts/_main.scss
+++ b/assets/styles/layouts/_main.scss
@@ -1,7 +1,8 @@
 main {
   background-color: $white;
-  padding: 20px;
-    min-height: 65vh;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  min-height: 65vh;
 }
 
 body {
